# chopfox

./: .gitignore  CMakeLists.txt  README.md
src/: extract.cc  extract.hpp  main.cc  simple.cc  simple.hpp  text_detect.cc  text_detect.hpp
web/: package.json  webpack.config.js
web/demo/: demo.js  index.html  index.js
web/src/: extract.js  index.js  simple.js
